WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303025
[blocks-in-inline] Spanning inline level boxes on block lines should not include their padding/border
https://bugs.webkit.org/show_bug.cgi?id=303025
Summary
[blocks-in-inline] Spanning inline level boxes on block lines should not incl...
alan
Reported
2025-11-23 05:44:25 PST
ssia
Attachments
[fast-cq]Patch
(3.89 KB, patch)
2025-11-23 05:47 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-23 05:47:07 PST
Created
attachment 477484
[details]
[fast-cq]Patch
EWS
Comment 2
2025-11-23 08:30:50 PST
Committed
303463@main
(c3fcb821f371): <
https://commits.webkit.org/303463@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477484
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-11-23 08:31:12 PST
<
rdar://problem/165305352
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug