[blocks-in-inline] Spanning inline level boxes on block lines should not include their padding/border https://bugs.webkit.org/show_bug.cgi?id=303025

Reviewed by Antti Koivisto.

Ideally these borders/paddings would not show up on these spanning boxes.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBox.cpp:
(WebCore::Layout::LineBox::logicalContentBoxForInlineBox const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBox.h:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processNonBidiContent):

Canonical link: https://commits.webkit.org/303463@main